fix(client): updated z-index

--- a/client/src/css/Vehicles.css
+++ b/client/src/css/Vehicles.css
@@ -307,7 +307,7 @@
   font-weight: 500;
   text-align: center;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
-  z-index: 9998;
+  z-index: 9999;
 }
 
 .vehicle-placeholder-text {
